--- a/index.html
+++ b/index.html
@@ -1,244 +1,348 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>ARKHIV-X | Public Records Division</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>ARKHIV-X | Central de Registros</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
+<style>
 
-    :root {
-      --bg-main: #0f1218;
-      --bg-dark: #12161c;
-      --bg-panel: #1a1f27;
-      --blue-main: #0f1c2e;
-      --blue-soft: #1c2b42;
-      --text-main: #e6e6e6;
-      --text-muted: #9aa3ad;
-      --accent: #3a5a8c;
-    }
+:root {
+  --bg-main: #0f1218;
+  --bg-dark: #12161c;
+  --bg-panel: #1a1f27;
+  --blue-main: #0f1c2e;
+  --text-main: #e6e6e6;
+  --text-muted: #9aa3ad;
+  --accent: #3a5a8c;
+}
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
 
-    body {
-      background: var(--bg-main);
-      color: var(--text-main);
-    }
+body {
+  background: var(--bg-main);
+  color: var(--text-main);
+}
 
-    /* HEADER */
+/* HEADER */
 
-    header {
-      background: var(--bg-dark);
-      padding: 20px 40px;
-      border-bottom: 1px solid #222;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+header {
+  background: var(--bg-dark);
+  padding: 18px 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #222;
+}
 
-    header h1 {
-      font-size: 22px;
-      letter-spacing: 2px;
-    }
+.logo {
+  font-size: 20px;
+  letter-spacing: 2px;
+}
 
-    nav a {
-      color: var(--text-muted);
-      text-decoration: none;
-      margin-left: 25px;
-      font-size: 14px;
-      transition: 0.3s;
-    }
+.menu-btn {
+  font-size: 22px;
+  cursor: pointer;
+}
 
-    nav a:hover {
-      color: var(--accent);
-    }
+/* MENU */
 
-    /* HERO */
+.menu {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 260px;
+  height: 100%;
+  background: #0f1218;
+  padding: 30px;
+  transition: 0.3s;
+  z-index: 10;
+  border-left: 1px solid #222;
+}
 
-    .hero {
-      background: linear-gradient(180deg, #0f1c2e, #0f1218);
-      padding: 60px 40px;
-    }
+.menu.active {
+  right: 0;
+}
 
-    .hero h2 {
-      font-size: 26px;
-      margin-bottom: 10px;
-    }
+.menu a {
+  display: block;
+  color: var(--text-main);
+  text-decoration: none;
+  margin: 18px 0;
+  font-size: 15px;
+}
 
-    .hero p {
-      color: var(--text-muted);
-      max-width: 600px;
-    }
+.menu a:hover {
+  color: var(--accent);
+}
 
-    .hero button {
-      margin-top: 20px;
-      padding: 10px 25px;
-      background: var(--accent);
-      border: none;
-      color: white;
-      cursor: pointer;
-    }
+/* HERO */
 
-    /* SECTIONS */
+.hero {
+  background: linear-gradient(180deg,#0f1c2e,#0f1218);
+  padding: 70px 25px;
+}
 
-    .section {
-      padding: 40px;
-    }
+.hero h1 {
+  font-size: 28px;
+  margin-bottom: 10px;
+}
 
-    .section h3 {
-      margin-bottom: 20px;
-      letter-spacing: 1px;
-      border-left: 3px solid var(--accent);
-      padding-left: 10px;
-    }
+.hero p {
+  color: var(--text-muted);
+  max-width: 600px;
+}
 
-    /* CASES */
+.hero button {
+  margin-top: 20px;
+  padding: 10px 22px;
+  background: var(--accent);
+  border: none;
+  color: white;
+  cursor: pointer;
+}
 
-    .cases {
-      display: flex;
-      gap: 20px;
-      overflow-x: auto;
-      padding-bottom: 10px;
-    }
+/* SECTIONS */
 
-    .case-card {
-      min-width: 260px;
-      background: var(--bg-panel);
-      padding: 20px;
-      border: 1px solid #222;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+.section {
+  padding: 40px 25px;
+}
 
-    .case-card:hover {
-      border-color: var(--accent);
-      transform: translateY(-3px);
-    }
+.section h2 {
+  margin-bottom: 20px;
+  border-left: 3px solid var(--accent);
+  padding-left: 10px;
+  letter-spacing: 1px;
+}
 
-    .case-card span {
-      color: var(--text-muted);
-      font-size: 12px;
-    }
+/* CASES */
 
-    .case-card h4 {
-      margin: 8px 0;
-    }
+.case-list {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  padding-bottom: 10px;
+}
 
-    /* NEWS */
+.case-card {
+  min-width: 260px;
+  background: var(--bg-panel);
+  border: 1px solid #222;
+  cursor: pointer;
+  transition: 0.3s;
+}
 
-    .news-item {
-      background: var(--bg-panel);
-      padding: 15px 20px;
-      margin-bottom: 10px;
-      border-left: 3px solid var(--accent);
-      cursor: pointer;
-    }
+.case-card:hover {
+  border-color: var(--accent);
+  transform: translateY(-3px);
+}
 
-    .news-item:hover {
-      background: #202631;
-    }
+.case-img {
+  width: 100%;
+  height: 140px;
+  background: #222;
+  background-size: cover;
+  background-position: center;
+}
 
-    /* FOOTER */
+.case-content {
+  padding: 15px;
+}
 
-    footer {
-      background: var(--bg-dark);
-      padding: 20px;
-      text-align: center;
-      font-size: 12px;
-      color: var(--text-muted);
-      border-top: 1px solid #222;
-    }
+.case-content span {
+  font-size: 12px;
+  color: var(--text-muted);
+}
 
-  </style>
+.case-content h3 {
+  margin: 6px 0;
+  font-size: 16px;
+}
+
+.case-content p {
+  font-size: 14px;
+  color: #ccc;
+}
+
+/* NEWS */
+
+.news-item {
+  background: var(--bg-panel);
+  padding: 15px 18px;
+  margin-bottom: 12px;
+  border-left: 3px solid var(--accent);
+  cursor: pointer;
+}
+
+.news-item:hover {
+  background: #202631;
+}
+
+/* FOOTER */
+
+footer {
+  background: var(--bg-dark);
+  padding: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: var(--text-muted);
+  border-top: 1px solid #222;
+}
+
+/* FILTER (para futuro) */
+
+.filter {
+  filter: grayscale(30%) contrast(1.1);
+}
+
+</style>
 </head>
 
 <body>
 
 <header>
 
-  <h1>ARKHIV-X</h1>
+<div class="logo">ARKHIV-X</div>
 
-  <nav>
-    <a href="#">Casos</a>
-    <a href="#">Instituição</a>
-    <a href="#">Profissionais</a>
-    <a href="#">Carreira</a>
-    <a href="#">Concursos</a>
-    <a href="#">Arquivos</a>
-  </nav>
+<div class="menu-btn" onclick="toggleMenu()">☰</div>
 
 </header>
 
+<!-- MENU -->
+
+<div class="menu" id="menu">
+
+<a href="#">Casos</a>
+<a href="#">Instituição</a>
+<a href="#">Profissionais</a>
+<a href="#">Carreira</a>
+<a href="#">Concursos</a>
+<a href="#">Arquivos</a>
+
+</div>
+
+<!-- HERO -->
+
 <section class="hero">
 
-  <h2>Public Records Division</h2>
+<h1>Central de Registros Institucionais</h1>
 
-  <p>
-    Sistema oficial de divulgação de investigações, análises
-    comportamentais e relatórios institucionais.
-  </p>
+<p>
+Sistema oficial de divulgação de investigações,
+relatórios técnicos e análises comportamentais.
+</p>
 
-  <button>Acessar relatório</button>
+<button>Acessar relatório</button>
 
 </section>
+
+<!-- CASES -->
 
 <section class="section">
 
-  <h3>Casos Recentes</h3>
+<h2>Casos Recentes</h2>
 
-  <div class="cases">
+<div class="case-list">
 
-    <div class="case-card">
-      <span>CASO 041-B · Em andamento</span>
-      <h4>Distrito Industrial</h4>
-      <p>Homicídio com evidências manipuladas.</p>
-    </div>
+<!-- CARD 1 -->
 
-    <div class="case-card">
-      <span>CASO 038-A · Encerrado</span>
-      <h4>Residencial Severny</h4>
-      <p>Tripla fraude financeira.</p>
-    </div>
+<div class="case-card">
 
-    <div class="case-card">
-      <span>CASO 029-C · Arquivado</span>
-      <h4>Terminal Ferroviário</h4>
-      <p>Incêndio de origem criminosa.</p>
-    </div>
+<div class="case-img filter"
+style="background-image:url('https://images.unsplash.com/photo-1528740561666-dc2479dc08ab');">
+</div>
 
-  </div>
+<div class="case-content">
+
+<span>CASO 041-B · Em andamento</span>
+<h3>Distrito Industrial</h3>
+<p>Homicídio com evidências manipuladas.</p>
+
+</div>
+
+</div>
+
+<!-- CARD 2 -->
+
+<div class="case-card">
+
+<div class="case-img filter"
+style="background-image:url('https://images.unsplash.com/photo-1521737604893-d14cc237f11d');">
+</div>
+
+<div class="case-content">
+
+<span>CASO 038-A · Encerrado</span>
+<h3>Residencial Severny</h3>
+<p>Tripla fraude financeira.</p>
+
+</div>
+
+</div>
+
+<!-- CARD 3 -->
+
+<div class="case-card">
+
+<div class="case-img filter"
+style="background-image:url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d');">
+</div>
+
+<div class="case-content">
+
+<span>CASO 029-C · Arquivado</span>
+<h3>Terminal Ferroviário</h3>
+<p>Incêndio de origem criminosa.</p>
+
+</div>
+
+</div>
+
+</div>
 
 </section>
+
+<!-- NEWS -->
 
 <section class="section">
 
-  <h3>Últimas Atualizações</h3>
+<h2>Últimas Atualizações</h2>
 
-  <div class="news-item">
-    Concurso público preenche 780 vagas até início de 2026.
-  </div>
+<div class="news-item">
+Concurso público preenche 780 vagas até início de 2026.
+</div>
 
-  <div class="news-item">
-    Nova unidade regional é inaugurada em setor leste.
-  </div>
+<div class="news-item">
+Nova unidade regional é inaugurada em setor leste.
+</div>
 
-  <div class="news-item">
-    Departamento passa por reestruturação interna.
-  </div>
+<div class="news-item">
+Departamento passa por reestruturação interna.
+</div>
 
 </section>
+
+<!-- FOOTER -->
 
 <footer>
 
-  ARKHIV-X © 2026 · Public Security Network<br>
-  All rights reserved
+ARKHIV-X © 2026 · Public Security Network<br>
+All Rights Reserved
 
 </footer>
+
+<script>
+
+function toggleMenu() {
+  document.getElementById("menu").classList.toggle("active");
+}
+
+</script>
 
 </body>
 </html>
