--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   --bg-main: #0f1218;
   --bg-dark: #12161c;
   --bg-panel: #1a1f27;
-  --blue-main: #0f1c2e;
   --text-main: #e6e6e6;
   --text-muted: #9aa3ad;
   --accent: #3a5a8c;
@@ -168,6 +167,8 @@ header {
   border: 1px solid #222;
   cursor: pointer;
   transition: 0.3s;
+  color: inherit;
+  text-decoration: none;
 }
 
 .case-card:hover {
@@ -288,7 +289,9 @@ relatórios técnicos e análises comportamentais.
 
 <div class="case-list">
 
-<div class="case-card">
+<!-- 041 -->
+
+<a href="caso-041.html" class="case-card">
 
 <div class="case-img filter"></div>
 
@@ -300,9 +303,11 @@ relatórios técnicos e análises comportamentais.
 
 </div>
 
-</div>
+</a>
 
-<div class="case-card">
+<!-- 038 -->
+
+<a href="caso-038.html" class="case-card">
 
 <div class="case-img filter"></div>
 
@@ -314,9 +319,11 @@ relatórios técnicos e análises comportamentais.
 
 </div>
 
-</div>
+</a>
 
-<div class="case-card">
+<!-- 029 -->
+
+<a href="caso-029.html" class="case-card">
 
 <div class="case-img filter"></div>
 
@@ -328,7 +335,7 @@ relatórios técnicos e análises comportamentais.
 
 </div>
 
-</div>
+</a>
 
 </div>
 
