--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ footer {
   <div class="close-btn" onclick="closeMenu()">✕</div>
 </div>
 
-<a href="#">Casos</a>
+<a href="casos.html">Casos</a>
 <a href="#">Instituição</a>
 <a href="#">Profissionais</a>
 <a href="#">Carreira</a>
