--- a/casos.html
+++ b/casos.html
@@ -150,7 +150,7 @@ Sistema oficial de consulta — acesso público monitorado
 <h2>041-B — Distrito Industrial</h2>
 <p>Homicídio | Atualizado: 18/01/2026</p>
 </div>
-<div class="status">ENCERRADO</div>
+<div class="status">EM ANDAMENTO</div>
 </a>
 </div>
 
