--- a/casos.html
+++ b/casos.html
@@ -15,6 +15,7 @@
   --text-muted: #9aa3ad;
   --accent: #3a5a8c;
   --green: #6fa36f;
+  --yellow: #c8b45b;
 }
 
 * {
@@ -110,8 +111,18 @@ header a {
   padding: 5px 10px;
   border-radius: 3px;
   letter-spacing: 0.4px;
+}
+
+/* CORES */
+
+.closed {
   background: rgba(111,163,111,0.15);
   color: var(--green);
+}
+
+.open {
+  background: rgba(200,180,91,0.15);
+  color: var(--yellow);
 }
 
 /* FOOTER */
@@ -146,11 +157,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-041.html">
+
 <div class="case-info">
 <h2>041-B — Distrito Industrial</h2>
 <p>Homicídio | Atualizado: 18/01/2026</p>
 </div>
-<div class="status">EM ANDAMENTO</div>
+
+<div class="status open">EM ANDAMENTO</div>
+
 </a>
 </div>
 
@@ -158,11 +172,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-038.html">
+
 <div class="case-info">
 <h2>038-A — Residencial Severny</h2>
 <p>Homicídio múltiplo | 09/12/2025</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -170,11 +187,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-029.html">
+
 <div class="case-info">
 <h2>029-C — Distrito Portuário</h2>
 <p>Silenciamento corporativo | 03/11/2025</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -182,11 +202,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-026.html">
+
 <div class="case-info">
 <h2>026-A — Bairro Kirovsky</h2>
 <p>Homicídio doméstico | 22/05/2024</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -194,11 +217,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-024.html">
+
 <div class="case-info">
 <h2>024-B — Distrito Acadêmico</h2>
 <p>Extorsão e homicídio | 11/02/2024</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -206,11 +232,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-021.html">
+
 <div class="case-info">
 <h2>021-C — Bairro Volnaya</h2>
 <p>Violência doméstica | 29/10/2023</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -218,11 +247,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-019.html">
+
 <div class="case-info">
 <h2>019-D — Conj. Novaya</h2>
 <p>Negligência coletiva | 17/06/2023</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -230,11 +262,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-017.html">
+
 <div class="case-info">
 <h2>017-B — Centro Volga</h2>
 <p>Crime financeiro | 03/02/2023</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -242,11 +277,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-015.html">
+
 <div class="case-info">
 <h2>015-A — Zona Industrial</h2>
 <p>Conflito por drogas | 14/09/2022</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -254,11 +292,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-014.html">
+
 <div class="case-info">
 <h2>014-K — Distrito Zarya</h2>
 <p>Abuso psicológico | 08/04/2022</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -266,11 +307,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-012.html">
+
 <div class="case-info">
 <h2>012-F — Hospital Central</h2>
 <p>Erro médico | 21/11/2021</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -278,11 +322,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-010.html">
+
 <div class="case-info">
 <h2>010-M — Distrito Nevsky</h2>
 <p>Perseguição obsessiva | 05/07/2021</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
@@ -290,11 +337,14 @@ Sistema oficial de consulta — acesso público monitorado
 
 <div class="case">
 <a href="caso-009.html">
+
 <div class="case-info">
 <h2>009-R — Rodovia M-17</h2>
 <p>Homicídio culposo | 14/03/2021</p>
 </div>
-<div class="status">ENCERRADO</div>
+
+<div class="status closed">ENCERRADO</div>
+
 </a>
 </div>
 
