--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ footer {
 </div>
 
 <a href="casos.html">Casos</a>
-<a href="#">Instituição</a>
+<a href="instituicao.html">Instituição</a>
 <a href="#">Profissionais</a>
 <a href="#">Carreira</a>
 <a href="#">Concursos</a>
