--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ footer {
 
 <a href="casos.html">Casos</a>
 <a href="instituicao.html">Instituição</a>
-<a href="#">Profissionais</a>
+<a href="profissionais.html">Profissionais</a>
 <a href="#">Carreira</a>
 <a href="#">Concursos</a>
 <a href="#">Arquivos</a>
