--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ footer {
 <a href="instituicao.html">Instituição</a>
 <a href="profissionais.html">Profissionais</a>
 <a href="carreira.html">Carreira</a>
-<a href="#">Concursos</a>
-<a href="#">Arquivos</a>
+<a href="concursos.html">Concursos</a>
+<a href="arquivos.html">Arquivos</a>
 
 </div>
 
