--- a/profissionais.html
+++ b/profissionais.html
@@ -77,8 +77,19 @@ header a{
 
 .person h2{
   font-size:17px;
-  margin-bottom:6px;
+  margin-bottom:4px;
 }
+
+/* ID FUNCIONAL */
+
+.id-funcional{
+  font-size:12px;
+  color:#7f8894;
+  letter-spacing:1px;
+  margin-bottom:8px;
+}
+
+/* FUNÇÃO */
 
 .role{
   font-size:13px;
@@ -137,6 +148,8 @@ Cadastro funcional — versão pública
 
 <h2>Aleksei Pavlovich Dmitriev</h2>
 
+<p class="id-funcional">ID Funcional: 94721-03</p>
+
 <p class="role">
 Analista de Perfil Criminal — Perícia Comportamental
 </p>
@@ -160,6 +173,8 @@ Atuação prioritária em casos de alta complexidade.
 
 <h2>Larisa Morozova</h2>
 
+<p class="id-funcional">ID Funcional: 95284-11</p>
+
 <p class="role">
 Perita Criminal — Análise de Evidências
 </p>
@@ -178,6 +193,8 @@ Perita Criminal — Análise de Evidências
 <div class="person">
 
 <h2>Mikhail Voronov</h2>
+
+<p class="id-funcional">ID Funcional: 93840-07</p>
 
 <p class="role">
 Investigador-Chefe — Coordenação Operacional
@@ -198,6 +215,8 @@ Investigador-Chefe — Coordenação Operacional
 
 <h2>Anna Lebedeva</h2>
 
+<p class="id-funcional">ID Funcional: 96155-02</p>
+
 <p class="role">
 Analista de Dados — Inteligência Criminal
 </p>
@@ -216,6 +235,8 @@ Analista de Dados — Inteligência Criminal
 <div class="person">
 
 <h2>Sergei Petrov</h2>
+
+<p class="id-funcional">ID Funcional: 92974-19</p>
 
 <p class="role">
 Consultor Jurídico — Procedimentos e Conformidade
