--- a/login.html
+++ b/login.html
@@ -160,7 +160,7 @@ const users = [
 {
   name: "Aleksei Pavlovich Dmitriev",
   id: "94721-03",
-  page: "painel-alek.html"
+  page: "painel-aleksei.html"
 },
 
 {
