--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -11,12 +11,11 @@
   --bg-main:#0f1218;
   --bg-dark:#12161c;
   --bg-panel:#1a1f27;
-  --bg-light:#1f2530;
   --text-main:#e6e6e6;
   --text-muted:#9aa3ad;
   --accent:#3a5a8c;
-  --green:#6fa36f;
-  --yellow:#c8b45b;
+  --green:#6fbf73;
+  --yellow:#d4b24c;
 }
 
 *{
@@ -33,147 +32,143 @@ body{
   min-height:100vh;
 }
 
-/* SIDEBAR */
+
+/* BARRA LATERAL */
 
 .sidebar{
   width:230px;
   background:var(--bg-dark);
   border-right:1px solid #222;
-  display:flex;
-  flex-direction:column;
+  padding:25px 18px;
 }
 
-.logo{
-  padding:20px;
-  border-bottom:1px solid #222;
+.sidebar h1{
   font-size:16px;
-  font-weight:bold;
+  margin-bottom:30px;
   text-align:center;
 }
 
-.menu{
-  flex:1;
+.sidebar span{
+  color:var(--accent);
 }
 
 .menu a{
   display:block;
-  padding:14px 20px;
+  padding:12px 10px;
+  color:var(--text-muted);
   text-decoration:none;
-  color:var(--text-main);
   font-size:14px;
-  border-bottom:1px solid #1a1f27;
+  border-radius:4px;
+  margin-bottom:4px;
 }
 
 .menu a:hover{
-  background:var(--bg-panel);
+  background:#1e2530;
+  color:#fff;
 }
 
 .logout{
-  border-top:1px solid #222;
+  margin-top:40px;
+  font-size:13px;
+  color:#c05c5c;
+  text-decoration:none;
+  display:block;
 }
 
-.logout a{
-  color:#b25b5b;
-}
 
-/* MAIN */
+/* CONTEÚDO */
 
 .main{
   flex:1;
-  display:flex;
-  flex-direction:column;
+  padding:35px 40px;
 }
 
-/* TOPBAR */
 
-.topbar{
-  background:var(--bg-dark);
-  border-bottom:1px solid #222;
-  padding:15px 25px;
+/* TOPO */
+
+.top{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  margin-bottom:35px;
 }
 
-.topbar h1{
-  font-size:18px;
-  font-weight:normal;
-}
-
-.user-box{
+.user{
   display:flex;
   align-items:center;
-  gap:12px;
+  gap:15px;
 }
 
-.user-box img{
-  width:42px;
-  height:56px;
+.user img{
+  width:48px;
+  height:48px;
+  border-radius:50%;
   object-fit:cover;
-  border:1px solid #222;
+  border:1px solid #333;
 }
 
 .user-info{
-  font-size:12px;
-  line-height:1.4;
+  font-size:13px;
 }
 
-/* CONTENT */
-
-.content{
-  padding:30px 25px;
-  flex:1;
-  background:var(--bg-light);
+.user-info strong{
+  font-size:14px;
 }
+
+.status{
+  color:var(--green);
+}
+
 
 /* CARDS */
 
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-  margin-bottom:30px;
+  gap:18px;
+  margin-bottom:40px;
 }
 
 .card{
   background:var(--bg-panel);
   border:1px solid #222;
-  padding:18px;
+  padding:20px;
 }
 
-.card h2{
+.card h3{
   font-size:14px;
-  margin-bottom:6px;
+  margin-bottom:10px;
+  color:var(--text-muted);
 }
 
 .card p{
-  font-size:22px;
+  font-size:28px;
   font-weight:bold;
 }
 
-/* TABLE */
 
-.table-box{
+/* TABELA */
+
+.table{
   background:var(--bg-panel);
   border:1px solid #222;
-  margin-bottom:30px;
 }
 
-.table-box h2{
-  padding:15px 18px;
+.table h2{
+  padding:18px 20px;
+  font-size:16px;
   border-bottom:1px solid #222;
-  font-size:15px;
 }
 
 table{
   width:100%;
   border-collapse:collapse;
+  font-size:13px;
 }
 
-td,th{
-  padding:10px 12px;
+th,td{
+  padding:12px 14px;
   border-bottom:1px solid #222;
-  font-size:13px;
   text-align:left;
 }
 
@@ -182,56 +177,22 @@ th{
   font-weight:normal;
 }
 
-.status-active{
+.done{
   color:var(--green);
 }
 
-.status-pending{
+.pending{
   color:var(--yellow);
 }
 
-/* FOLDERS */
 
-.folder-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
-  gap:25px;
-  padding:25px;
-}
+/* RODAPÉ */
 
-.folder{
-  background:#1a1f27;
-  border:1px solid #222;
-  padding:20px 10px;
+footer{
+  margin-top:50px;
+  font-size:12px;
   text-align:center;
-  text-decoration:none;
-  color:#e6e6e6;
-  transition:0.2s;
-}
-
-.folder:hover{
-  background:#222a36;
-  border-color:#3a5a8c;
-}
-
-.folder .icon{
-  font-size:32px;
-  margin-bottom:8px;
-}
-
-.folder .name{
-  font-size:13px;
-  line-height:1.4;
-}
-
-/* FOOTER */
-
-.footer{
-  text-align:center;
-  font-size:11px;
   color:var(--text-muted);
-  padding:10px;
-  border-top:1px solid #222;
 }
 
 </style>
@@ -239,52 +200,49 @@ th{
 
 <body>
 
+
 <!-- SIDEBAR -->
 
 <div class="sidebar">
 
-<div class="logo">
-ARKHIV-X | Interno
-</div>
+<h1>ARKHIV-X<br><span>Interno</span></h1>
 
 <div class="menu">
 
-<a href="#">Visão Geral</a>
+<a href="painel-aleksei.html">Visão Geral</a>
 <a href="#">Casos Ativos</a>
 <a href="#">Relatórios</a>
-<a href="#">Arquivos</a>
+<a href="arquivos-aleksei.html">Arquivos</a>
 <a href="#">Análises</a>
 <a href="#">Perfil</a>
 
 </div>
 
-<div class="logout">
-
-<a href="login.html">Encerrar Sessão</a>
+<a class="logout" href="index.html">Encerrar Sessão</a>
 
 </div>
 
-</div>
 
-<!-- MAIN -->
+<!-- CONTEÚDO -->
 
 <div class="main">
 
-<!-- TOPBAR -->
 
-<div class="topbar">
+<!-- TOPO -->
 
-<h1>Painel Operacional</h1>
+<div class="top">
 
-<div class="user-box">
+<h2>Painel Operacional</h2>
 
-<img src="alek.jpg" alt="Aleksei">
+<div class="user">
+
+<img src="aleksei-id.jpg" alt="Aleksei">
 
 <div class="user-info">
 
-Aleksei P. Dmitriev<br>
+<strong>Aleksei P. Dmitriev</strong><br>
 ID: 94721-03<br>
-Status: <span class="status-active">Ativo</span>
+<span class="status">Ativo</span>
 
 </div>
 
@@ -292,39 +250,37 @@ Status: <span class="status-active">Ativo</span>
 
 </div>
 
-<!-- CONTENT -->
-
-<div class="content">
 
 <!-- CARDS -->
 
 <div class="grid">
 
 <div class="card">
-<h2>Casos Ativos</h2>
+<h3>Casos Ativos</h3>
 <p>1</p>
 </div>
 
 <div class="card">
-<h2>Relatórios Pendentes</h2>
+<h3>Relatórios Pendentes</h3>
 <p>2</p>
 </div>
 
 <div class="card">
-<h2>Arquivos Privados</h2>
-<p>5</p>
+<h3>Arquivos Privados</h3>
+<p>14</p>
 </div>
 
 <div class="card">
-<h2>Acessos Recentes</h2>
+<h3>Acessos Recentes</h3>
 <p>7</p>
 </div>
 
 </div>
 
-<!-- ATIVIDADES -->
 
-<div class="table-box">
+<!-- TABELA -->
+
+<div class="table">
 
 <h2>Últimas Atividades</h2>
 
@@ -341,71 +297,40 @@ Status: <span class="status-active">Ativo</span>
 <td>29/01/2026</td>
 <td>Relatório</td>
 <td>Análise Caso 041-B</td>
-<td class="status-pending">Pendente</td>
+<td class="pending">Pendente</td>
 </tr>
 
 <tr>
 <td>27/01/2026</td>
 <td>Acesso</td>
-<td>Consulta Arquivos Sigilosos</td>
-<td class="status-active">Concluído</td>
+<td>Arquivos Sigilosos</td>
+<td class="done">Concluído</td>
 </tr>
 
 <tr>
 <td>25/01/2026</td>
 <td>Upload</td>
 <td>Material Pericial — Setor Norte</td>
-<td class="status-active">Concluído</td>
+<td class="done">Concluído</td>
+</tr>
+
+<tr>
+<td>22/01/2026</td>
+<td>Revisão</td>
+<td>Relatório 024-B</td>
+<td class="done">Concluído</td>
 </tr>
 
 </table>
 
 </div>
 
-<!-- ARQUIVOS PESSOAIS -->
 
-<div class="table-box">
-
-<h2>Arquivos Pessoais — Acesso Restrito</h2>
-
-<div class="folder-grid">
-
-<a href="arquivo/log-0217.html" class="folder">
-  <div class="icon">📁</div>
-  <div class="name">Registro 02:17</div>
-</a>
-
-<a href="arquivo/audio-helena-transcricao.html" class="folder">
-  <div class="icon">📁</div>
-  <div class="name">Ocorrência 14-C</div>
-</a>
-
-<a href="arquivo/caso-vertice.html" class="folder">
-  <div class="icon">📁</div>
-  <div class="name">Operação Vértice</div>
-</a>
-
-<a href="arquivo/arquivo-h2019.html" class="folder">
-  <div class="icon">📁</div>
-  <div class="name">Helena (H-2019)</div>
-</a>
-
-<a href="arquivo/relatorio-miya.html" class="folder">
-  <div class="icon">📁</div>
-  <div class="name">Miya — Relatório</div>
-</a>
-
-</div>
-
-</div>
-
-</div>
-
-<div class="footer">
+<footer>
 
 ARKHIV-X — Sistema Interno Monitorado
 
-</div>
+</footer>
 
 </div>
 
