--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -236,7 +236,7 @@ footer{
 
 <div class="user">
 
-<img src="aleksei-id.jpg" alt="Aleksei">
+<img src="alek.jpg" alt="Aleksei">
 
 <div class="user-info">
 
