--- a/arquivos-aleksei.html
+++ b/arquivos-aleksei.html
@@ -153,7 +153,7 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 <!-- AUDIO -->
 
 <div class="folder">
-<a href="audio-helena.html">
+<a href="audio-helenatranscrito.html">
 <div class="icon">📂</div>
 <div class="name">Gravação Residencial — Dez/2018</div>
 </a>
@@ -162,7 +162,7 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 <!-- ORGANIZAÇÃO -->
 
 <div class="folder">
-<a href="ocorrencia-14c.html">
+<a href="caso-vertice.html">
 <div class="icon">📂</div>
 <div class="name">Ocorrência 14-C<br>(Crime Organizado)</div>
 </a>
@@ -171,7 +171,7 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 <!-- HELENA -->
 
 <div class="folder">
-<a href="helena-caso.html">
+<a href="arquivo-h2019.html">
 <div class="icon">📂</div>
 <div class="name">Helena Dmitriev<br>H-2018</div>
 </a>
@@ -180,7 +180,7 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 <!-- MIYA -->
 
 <div class="folder">
-<a href="miya-relatorio.html">
+<a href="relatorio-miya.html">
 <div class="icon">📂</div>
 <div class="name">Miya A. Dmitriev<br>Relatório Familiar</div>
 </a>
