--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -214,7 +214,7 @@ footer{
 <a href="#">Relatórios</a>
 <a href="arquivos-aleksei.html">Arquivos</a>
 <a href="#">Análises</a>
-<a href="#">Perfil</a>
+<a href="perfil-aleksei.html">Perfil</a>
 
 </div>
 
