--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -210,7 +210,7 @@ footer{
 <div class="menu">
 
 <a href="painel-aleksei.html">Visão Geral</a>
-<a href="#">Casos Ativos</a>
+<a href="casos-ativos.html">Casos Ativos</a>
 <a href="#">Relatórios</a>
 <a href="arquivos-aleksei.html">Arquivos</a>
 <a href="#">Análises</a>
