--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -211,7 +211,7 @@ footer{
 
 <a href="painel-aleksei.html">Visão Geral</a>
 <a href="casos-ativos.html">Casos Ativos</a>
-<a href="#">Relatórios</a>
+<a href="relatorios.html">Relatórios</a>
 <a href="arquivos-aleksei.html">Arquivos</a>
 <a href="#">Análises</a>
 <a href="perfil-aleksei.html">Perfil</a>
