--- a/painel-aleksei.html
+++ b/painel-aleksei.html
@@ -2,8 +2,11 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
+
 <title>Painel Interno | ARKHIV-X</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="viewport"
+content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <style>
 
@@ -25,21 +28,27 @@
   font-family:Arial,sans-serif;
 }
 
+html,body{
+  width:100%;
+  height:100%;
+  overflow:hidden;
+}
+
 body{
   background:var(--bg-main);
   color:var(--text-main);
   display:flex;
-  min-height:100vh;
 }
 
 
-/* BARRA LATERAL */
+/* SIDEBAR */
 
 .sidebar{
   width:230px;
   background:var(--bg-dark);
   border-right:1px solid #222;
   padding:25px 18px;
+  flex-shrink:0;
 }
 
 .sidebar h1{
@@ -81,6 +90,7 @@ body{
 .main{
   flex:1;
   padding:35px 40px;
+  overflow-y:auto;
 }
 
 
@@ -147,11 +157,12 @@ body{
 }
 
 
-/* TABELA */
+/* TABELAS */
 
 .table{
   background:var(--bg-panel);
   border:1px solid #222;
+  margin-bottom:35px;
 }
 
 .table h2{
@@ -189,7 +200,7 @@ th{
 /* RODAPÉ */
 
 footer{
-  margin-top:50px;
+  margin-top:40px;
   font-size:12px;
   text-align:center;
   color:var(--text-muted);
@@ -278,7 +289,7 @@ ID: 94721-03<br>
 </div>
 
 
-<!-- TABELA -->
+<!-- ATIVIDADES -->
 
 <div class="table">
 
@@ -319,6 +330,54 @@ ID: 94721-03<br>
 <td>Revisão</td>
 <td>Relatório 024-B</td>
 <td class="done">Concluído</td>
+</tr>
+
+</table>
+
+</div>
+
+
+<!-- CASOS ENCERRADOS -->
+
+<div class="table">
+
+<h2>Casos Encerrados</h2>
+
+<table>
+
+<tr>
+<th>Código</th>
+<th>Tipo</th>
+<th>Encerramento</th>
+<th>Status</th>
+</tr>
+
+<tr>
+<td>014-C</td>
+<td>Crime Organizado</td>
+<td>18/11/2023</td>
+<td class="done">Finalizado</td>
+</tr>
+
+<tr>
+<td>032-H</td>
+<td>Homicídio Familiar</td>
+<td>04/05/2022</td>
+<td class="done">Encerrado</td>
+</tr>
+
+<tr>
+<td>067-I</td>
+<td>Seita Religiosa</td>
+<td>21/09/2021</td>
+<td class="done">Encerrado</td>
+</tr>
+
+<tr>
+<td>091-D</td>
+<td>Fraude Digital</td>
+<td>11/02/2020</td>
+<td class="done">Arquivado</td>
 </tr>
 
 </table>
