--- a/painel-larisa.html
+++ b/painel-larisa.html
@@ -2,7 +2,9 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
+
 <title>Painel Interno | ARKHIV-X</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -28,8 +30,25 @@
 body{
   background:var(--bg-main);
   color:var(--text-main);
-  min-height:100vh;
   display:flex;
+  min-height:100vh;
+}
+
+
+/* BOTÃO MOBILE */
+
+.menu-btn{
+  display:none;
+  position:fixed;
+  top:15px;
+  left:15px;
+  font-size:22px;
+  background:var(--bg-dark);
+  color:white;
+  border:none;
+  padding:8px 12px;
+  border-radius:4px;
+  z-index:1001;
 }
 
 
@@ -40,6 +59,8 @@ body{
   background:var(--bg-dark);
   border-right:1px solid #222;
   padding:25px 18px;
+  flex-shrink:0;
+  transition:0.3s;
 }
 
 .sidebar h1{
@@ -76,7 +97,7 @@ body{
 }
 
 
-/* MAIN */
+/* CONTEÚDO */
 
 .main{
   flex:1;
@@ -85,13 +106,15 @@ body{
 }
 
 
-/* TOP */
+/* TOPO */
 
 .top{
   display:flex;
   justify-content:space-between;
   align-items:center;
   margin-bottom:35px;
+  gap:15px;
+  flex-wrap:wrap;
 }
 
 .user{
@@ -148,7 +171,7 @@ body{
 }
 
 
-/* TABLE */
+/* TABELA */
 
 .table{
   background:var(--bg-panel);
@@ -161,39 +184,56 @@ body{
   border-bottom:1px solid #222;
 }
 
+.table-container{
+  overflow-x:auto;
+}
+
 table{
   width:100%;
   border-collapse:collapse;
   font-size:13px;
+  min-width:600px;
 }
 
 th,td{
   padding:12px 14px;
   border-bottom:1px solid #222;
   text-align:left;
+  white-space:nowrap;
 }
 
 th{
   color:var(--text-muted);
-  font-weight:normal;
 }
 
-.done{
-  color:var(--green);
-}
-
-.pending{
-  color:var(--yellow);
-}
+.done{color:var(--green);}
+.pending{color:var(--yellow);}
 
 
-/* FOOTER */
+/* MOBILE */
 
-footer{
-  margin-top:50px;
-  font-size:12px;
-  text-align:center;
-  color:var(--text-muted);
+@media (max-width:900px){
+
+  .menu-btn{
+    display:block;
+  }
+
+  .sidebar{
+    position:fixed;
+    left:-240px;
+    top:0;
+    height:100%;
+    z-index:1000;
+  }
+
+  .sidebar.active{
+    left:0;
+  }
+
+  .main{
+    padding:70px 20px 25px;
+  }
+
 }
 
 </style>
@@ -202,9 +242,14 @@ footer{
 <body>
 
 
+<!-- BOTÃO -->
+
+<button class="menu-btn" onclick="toggleMenu()">☰</button>
+
+
 <!-- SIDEBAR -->
 
-<div class="sidebar">
+<div class="sidebar" id="sidebar">
 
 <h1>ARKHIV-X<br><span>Interno</span></h1>
 
@@ -224,12 +269,12 @@ footer{
 </div>
 
 
-<!-- MAIN -->
+<!-- CONTEÚDO -->
 
 <div class="main">
 
 
-<!-- TOP -->
+<!-- TOPO -->
 
 <div class="top">
 
@@ -237,12 +282,12 @@ footer{
 
 <div class="user">
 
-<img src="larisa.jpg" alt="Larisa">
+<img src="larisa.jpg">
 
 <div class="user-info">
 
 <strong>Larisa Morozova</strong><br>
-ID: 94812-05<br>
+ID: 95284-11<br>
 <span class="status">Ativo</span>
 
 </div>
@@ -279,11 +324,13 @@ ID: 94812-05<br>
 </div>
 
 
-<!-- TABLE -->
+<!-- ATIVIDADES -->
 
 <div class="table">
 
 <h2>Últimas Atividades</h2>
+
+<div class="table-container">
 
 <table>
 
@@ -326,6 +373,8 @@ ID: 94812-05<br>
 
 </div>
 
+</div>
+
 
 <footer>
 
@@ -334,6 +383,42 @@ ARKHIV-X — Sistema Interno Monitorado
 </footer>
 
 </div>
+
+
+<script>
+
+const sidebar = document.getElementById("sidebar");
+const btn = document.querySelector(".menu-btn");
+
+function toggleMenu(){
+  sidebar.classList.toggle("active");
+}
+
+document.addEventListener("click", function(e){
+
+  if(window.innerWidth <= 900){
+
+    if(
+      !sidebar.contains(e.target) &&
+      !btn.contains(e.target)
+    ){
+      sidebar.classList.remove("active");
+    }
+
+  }
+
+});
+
+document.querySelectorAll(".menu a").forEach(link=>{
+  link.addEventListener("click", ()=>{
+    if(window.innerWidth <= 900){
+      sidebar.classList.remove("active");
+    }
+  });
+});
+
+</script>
+
 
 </body>
 </html>
