--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@ Sistema oficial de divulgação de investigações,
 relatórios técnicos e análises comportamentais.
 </p>
 
-<button>Acessar relatório</button>
-
+<a href="relatorio-publico.html">Acessar relatório</a>
 </section>
 
 <!-- CASES -->
