--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Sistema oficial de divulgação de investigações,
 relatórios técnicos e análises comportamentais.
 </p>
 
-<>button<><a href="relatorio-publico.html">Acessar relatório</a><>button<>
+<a href="relatorio-publico.html" class="btn">Acessar relatório</a>
 </section>
 
 <!-- CASES -->
