--- a/index.html
+++ b/index.html
@@ -130,13 +130,22 @@ header {
   max-width: 600px;
 }
 
-.hero button {
-  margin-top: 20px;
-  padding: 10px 22px;
-  background: var(--accent);
-  border: none;
-  color: white;
-  cursor: pointer;
+/* BOTÃO */
+
+.btn{
+  display:inline-block;
+  margin-top:20px;
+  padding:12px 26px;
+  background:var(--accent);
+  color:white;
+  text-decoration:none;
+  border-radius:4px;
+  font-size:14px;
+  transition:0.3s;
+}
+
+.btn:hover{
+  opacity:0.85;
 }
 
 /* SECTIONS */
@@ -179,7 +188,6 @@ header {
 .case-img {
   width: 100%;
   height: 140px;
-  background: #222;
   background-size: cover;
   background-position: center;
 }
@@ -278,6 +286,7 @@ relatórios técnicos e análises comportamentais.
 </p>
 
 <a href="relatorio-publico.html" class="btn">Acessar relatório</a>
+
 </section>
 
 <!-- CASES -->
@@ -292,7 +301,7 @@ relatórios técnicos e análises comportamentais.
 
 <a href="caso-041.html" class="case-card">
 
-<div class="case-img filter"></div>
+<div class="case-img filter" style="background-image:url('caso-041.jpg');"></div>
 
 <div class="case-content">
 
@@ -308,7 +317,7 @@ relatórios técnicos e análises comportamentais.
 
 <a href="caso-038.html" class="case-card">
 
-<div class="case-img filter"></div>
+<div class="case-img filter" style="background-image:url('caso-038.jpg');"></div>
 
 <div class="case-content">
 
@@ -324,7 +333,7 @@ relatórios técnicos e análises comportamentais.
 
 <a href="caso-029.html" class="case-card">
 
-<div class="case-img filter"></div>
+<div class="case-img filter" style="background-image:url('caso-029.jpg');"></div>
 
 <div class="case-content">
 
