--- a/arquivos-aleksei.html
+++ b/arquivos-aleksei.html
@@ -150,7 +150,7 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 </a>
 </div>
 
-<!-- AUDIO -->
+<!-- AUDIO HELENA -->
 
 <div class="folder">
 <a href="audio-helenatranscrito.html">
@@ -183,6 +183,30 @@ Material confidencial vinculado ao agente Aleksei P. Dmitriev
 <a href="relatorio-miya.html">
 <div class="icon">📂</div>
 <div class="name">Miya A. Dmitriev<br>Relatório Familiar</div>
+</a>
+</div>
+
+<!-- INTERROGATÓRIO -->
+
+<div class="folder">
+<a href="audio-confissao.html">
+<div class="icon">📂</div>
+<div class="name">
+Registro Não Oficial<br>
+Interrogatório — 2019
+</div>
+</a>
+</div>
+
+<!-- FOTOS -->
+
+<div class="folder">
+<a href="fotos-aleksei.html">
+<div class="icon">📂</div>
+<div class="name">
+Arquivo Visual<br>
+Material Bruto
+</div>
 </a>
 </div>
 
