--- a/audio-confissao.html
+++ b/audio-confissao.html
@@ -98,7 +98,7 @@ a{
 
 <p class="meta">
 Data: 14/04/2019<br>
-Horário: 23:41 — 00:12<br>
+Horário: 23:41 — 00:19<br>
 Origem: Dispositivo portátil — Canal isolado<br>
 Classificação: Não Catalogado<br>
 Responsável pelo arquivamento: A. P. Dmitriev
@@ -107,134 +107,171 @@ Responsável pelo arquivamento: A. P. Dmitriev
 <div class="panel">
 
 <div class="line noise">
-[início da gravação — ambiente fechado]
-</div>
-
-<div class="line">
-<span class="speaker">[Aleksei]</span>  
-Diz teu nome.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 1]</span>  
-M-Marcelo…
-</div>
-
-<div class="line">
-<span class="speaker">[Aleksei]</span>  
-Completo.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 1]</span>  
-Marcelo Vieira da Silva.
-</div>
-
-<div class="line">
-<span class="speaker">[Aleksei]</span>  
-Você estava na residência da Helena Dmitriev.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 1]</span>  
-A gente… a gente só fez o que mandaram.
+[início da gravação — ambiente fechado — gotejamento contínuo]
 </div>
 
 <div class="line noise">
-[silêncio — 6 segundos]
+[respiração irregular — múltiplas fontes]
 </div>
 
 <div class="line">
 <span class="speaker">[Aleksei]</span>  
-Quem mandou.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 2]</span>  
-Foi o… foi o Vasconcelos.  
-Ele pagou. Disse que era só assustar.
-</div>
-
-<div class="line">
-<span class="speaker">[Aleksei]</span>  
-Mentira.
+Olhem pra mim.
 </div>
 
 <div class="line noise">
-[impacto seco — grito abafado]
+[movimento abrupto — cadeira arrastada]
 </div>
 
 <div class="line">
-<span class="speaker">[Indivíduo 2]</span>  
-Tá! Tá!  
-Era pra entrar. Apagar ela.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 3]</span>  
-A gente não queria!  
-Eu juro!
+<span class="speaker">[Indivíduo]</span>  
+P-por favor… eu… eu tô olhando…
 </div>
 
 <div class="line">
 <span class="speaker">[Aleksei]</span>  
-Mas fez.
+Não.  
+Direito.
 </div>
 
 <div class="line noise">
-[respiração pesada — distância variável]
+[impacto seco — gemido contido]
 </div>
 
 <div class="line">
-<span class="speaker">[Indivíduo 1]</span>  
-Ele prometeu proteção…  
-Disse que ninguém ia ligar…
+<span class="speaker">[Indivíduo]</span>  
+Tô! Tô olhando! Eu juro!
 </div>
 
 <div class="line">
 <span class="speaker">[Aleksei]</span>  
-Nome.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 1]</span>  
-Henrique Vasconcelos.
+Vocês lembram dela.
 </div>
 
 <div class="line noise">
-[silêncio prolongado — 11 segundos]
+[silêncio — 7 segundos]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+A gente… a gente não queria…
 </div>
 
 <div class="line">
 <span class="speaker">[Aleksei]</span>  
-Última chance.
-</div>
-
-<div class="line">
-<span class="speaker">[Indivíduo 3]</span>  
-Foi ele.  
-Tudo partiu dele.
+Mas fizeram.
 </div>
 
 <div class="line noise">
-[manuseio metálico — possível arma]
+[respiração próxima ao microfone]
 </div>
 
 <div class="line">
-<span class="speaker">[Indivíduo 2]</span>  
-Não… não… por favor—
+<span class="speaker">[Indivíduo]</span>  
+Foi erro… foi desespero… foi—
+</div>
+
+<div class="line">
+<span class="speaker">[Aleksei]</span>  
+Foi escolha.
+</div>
+
+<div class="line noise">
+[ruído metálico — objeto sendo apoiado]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+Eu imploro… por favor… eu tenho família…
+</div>
+
+<div class="line">
+<span class="speaker">[Aleksei]</span>  
+Ela também tinha.
+</div>
+
+<div class="line noise">
+[silêncio — 9 segundos]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+A gente só seguiu ordem…
+</div>
+
+<div class="line noise">
+[interferência proposital — trecho inaudível — 3s]
+</div>
+
+<div class="line">
+<span class="speaker">[Aleksei]</span>  
+Repete.
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+E-ele… ele mandou…
+</div>
+
+<div class="line noise">
+[interferência — distorção contínua]
 </div>
 
 <div class="line redact">
-[interrupção súbita]
+[trecho corrompido]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+Por favor… por favor… eu faço qualquer coisa…
+</div>
+
+<div class="line">
+<span class="speaker">[Aleksei]</span>  
+Já fez.
+</div>
+
+<div class="line noise">
+[passos lentos — aproximação]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+Não… não chega perto… não…
+</div>
+
+<div class="line noise">
+[batimentos cardíacos detectáveis — microfone instável]
+</div>
+
+<div class="line">
+<span class="speaker">[Aleksei]</span>  
+Fiquem quietos.
+</div>
+
+<div class="line noise">
+[manuseio mecânico — possível arma]
+</div>
+
+<div class="line">
+<span class="speaker">[Indivíduo]</span>  
+Eu sinto muito… eu sinto muito… eu—
 </div>
 
 <div class="line redact">
-[ruído contínuo — gravação corrompida]
+[ruído abrupto — interrupção]
 </div>
 
 <div class="line redact">
-[encerramento forçado]
+[impactos sucessivos — abafados]
+</div>
+
+<div class="line redact">
+[gravação comprometida]
+</div>
+
+<div class="line redact">
+[encerramento manual]
 </div>
 
 </div>
