--- a/fotos-aleksei.html
+++ b/fotos-aleksei.html
@@ -94,6 +94,10 @@ Uso interno restrito.
 <img src="img/fotos/foto04.jpg">
 <img src="img/fotos/foto05.jpg">
 <img src="img/fotos/foto06.jpg">
+<img src="img/fotos/foto07.jpg">
+<img src="img/fotos/foto08.jpg">
+<img src="img/fotos/foto09.jpg">
+<img src="img/fotos/foto10.jpg">
 
 </div>
 
